--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,14 @@
 {% extends 'base.html' %}
 {% block content %}
 <p>MapBox will go on this page</p>
+<body>
+    <div id='map' style='width: 400px; height: 300px;'></div>
+    <script>
+        mapboxgl.accessToken = '{{mapbox_access_token}}';
+        var map = new mapboxgl.Map({
+        container: 'map',
+        style: 'mapbox://styles/mapbox/streets-v11'
+        });
+    </script>
+</body>
 {% endblock %}
