--- a/templates/home.html
+++ b/templates/home.html
@@ -9,6 +9,12 @@
         container: 'map',
         style: 'mapbox://styles/mapbox/streets-v11'
         });
+        var geocoder = new MapboxGeocoder({ // Initialize the geocoder
+        accessToken: mapboxgl.accessToken, // Set the access token
+        mapboxgl: mapboxgl, // Set the mapbox-gl instance
+        marker: false, // Do not use the default marker style
+        });
+        map.addControl(geocoder);
     </script>
 </body>
 {% endblock %}
