--- a/templates/base.html
+++ b/templates/base.html
@@ -16,8 +16,10 @@
             <a href="{% url 'home' %}">Home</a>
             {% if user.is_authenticated %}
             <a href="{% url 'profile' %}">Profile</a>
+            <a href="{% url 'search' %}">Search</a>
             <a href="{% url 'account_logout' %}">Logout</a>
             {% else %}
+            <a href="{% url 'serach' %}">Search</a>
             <a href="{% url 'account_login' %}">Login</a>
             {% endif %}
         </nav>
