Write photo model and daytrip functionality

--- a/templates/users/profile.html
+++ b/templates/users/profile.html
@@ -9,14 +9,31 @@
         <div>No photo has been uploaded</div>
     {% endif %}
     <div>{{ user.bio }}</div>
-    <a href="{% url 'socialaccount_connections' %}">Manage Social Accounts</a>
     <div>
+        <a href="{% url 'socialaccount_connections' %}"><button>Manage Social Accounts</button></a>
+        <button id="edit-user-button">Edit User Info</button>
+        <button id="add-daytrip-button">Add Trip</button>
+    </div>
+    <div id="user-form" class="hidden">
         <form action ="{% url 'profile' %}" method="POST" enctype="multipart/form-data">
             {% csrf_token %}
             {{ form.as_p }}
             <button type="submit">Update Profile</button>
         </form>
     </div>
+    <div id="add-daytrip-form" class="hidden">
+        <form action ="{% url 'add_daytrip' %}" method="POST">
+            {% csrf_token %}
+            {{ DaytripForm.as_p }}
+            <button type="submit">Add Trip</button>
+        </form>
+    </div>
+    <h3> My Trips</h3>
+    {% for daytrip in daytrips %}
+        <a href="{% url 'daytrip_detail' daytrip_pk=daytrip.pk %}">{{ daytrip.title }}</a>
+    {% empty %}
+        <p>No trips planned yet!</p>
+    {% endfor %}
 {% else %}
     <p>You are not logged in</p>
     <a href="{% url 'account_login' %}">Login Here</a>
