--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
             <a href="{% url 'search' %}">Search</a>
             <a href="{% url 'account_logout' %}">Logout</a>
             {% else %}
-            <a href="{% url 'serach' %}">Search</a>
+            <a href="{% url 'search' %}">Search</a>
             <a href="{% url 'account_login' %}">Login</a>
             {% endif %}
         </nav>
