Trying to center map

--- a/templates/home.html
+++ b/templates/home.html
@@ -8,7 +8,7 @@
         var map = new mapboxgl.Map({
         container: 'map',
         style: 'mapbox://styles/mapbox/streets-v11',
-        // center: [35.120196, -78.223586],
+        center: [35.120196, -78.223586],
     });
         var geocoder = new MapboxGeocoder({ // Initialize the geocoder
         accessToken: mapboxgl.accessToken, // Set the access token
