--- a/templates/climbguide/delete_daytrip.html
+++ b/templates/climbguide/delete_daytrip.html
@@ -3,12 +3,12 @@
 {% block content %}
 <h2>Delete Trip</h2>
 <p>
-    <form action="{% url 'delete_daytrip' daytrip.pk %}" method="POST">
+    <form action="{% url 'delete_daytrip' daytrip_pk=daytrip.pk %}" method="POST">
         {% csrf_token %}
         <p>Do you want to delete this trip?</p>
         <div>
             <button type="submit">Delete</button><br>
-            <a href="{% url 'daytrip_detail' daytrip.pk %}">Cancel</a>
+            <a href="{% url 'daytrip_detail' daytrip_pk=daytrip.pk %}"><button>Cancel</button></a>
         </div>
     </form>
 </p>
