--- a/templates/climbguide/route_detail.html
+++ b/templates/climbguide/route_detail.html
@@ -14,8 +14,8 @@
     {% endif %}
     {{ route.location }}
 </div><br>
-<button id="add-routephoto-button">Sumbit Photo</button>
-<div id="add-routephoto-form" class="hidden">
+<button id="button-one">Sumbit Photo</button>
+<div id="form-one" class="hidden">
     <form action="{% url 'addphoto_to_route' route_pk=route.pk %}" method="POST" enctype="multipart/form-data">
         {% csrf_token %}
         {{ PhotoForm.as_p }}
