--- a/templates/climbguide/pointofinterest_detail.html
+++ b/templates/climbguide/pointofinterest_detail.html
@@ -8,8 +8,30 @@
 <div>This point of interest has no photos yet. Add some!</div><br>
 {% endfor %}
 <div>
-    {{ pointofinterest.category }}<br>
-    {{ pointofinterest.description }}
+    {{ pointofinterest.get_category_display }}<br>
+    {{ pointofinterest.information }}
 </div><br>
-
+{% if user.is_authenticated and user == pointofinterest.owner %}
+<button id="button-one">Edit Point of Interest</button>
+<div id="form-one" class="hidden">
+    <form action="{% url 'edit_pointofinterest' pointofinterest_pk=pointofinterest.pk %}"method="POST">
+        {% csrf_token %}
+        {{ PointofinterestForm.as_p }}
+        <div>
+            <button type="submit">Update Point of Interest</button>
+           <a href="{% url 'pointofinterest_detail' pointofinterest_pk=pointofinterest.pk %}"><button>Cancel Update</button></a> 
+        </div>
+    </form>
+</div>
+{% endif %}
+<button id="button-two">Sumbit Photo</button>
+<div id="form-two" class="hidden">
+    <form action="{% url 'addphoto_to_pointofinterest' pointofinterest_pk=pointofinterest.pk %}" method="POST" enctype="multipart/form-data">
+        {% csrf_token %}
+        {{ PhotoForm.as_p }}
+        <div>
+            <button type="submit">Submit Photo</button>
+        </div>
+    </form>
+</div>
 {% endblock %}
