--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,18 @@
 .hidden {
     display: none;
 }
+
+#route-planning-container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.route-planning-column {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 0;
+    flex-shrink: 0;
+    flex-basis: 25%;
+    padding: 10px;
+}
