--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,7 @@
     <script src='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.2.0/mapbox-gl-geocoder.min.js'></script>
     <link rel='stylesheet' href='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.2.0/mapbox-gl-geocoder.css' type='text/css'/>
     <link rel="stylesheet" href="{% static 'css/style.css' %}"/>
+    <link rel="stylesheet" href="{% static 'vendor/dragula/dragula.min.css' %}"/>
     <title>{% block title %}ClimbGuide{% endblock %}</title>
 </head>
     <header>
@@ -32,5 +33,8 @@
         {% block content %}
         {% endblock %}
         <script src="{% static 'js/script.js' %}"></script>
+        <script src="{% static 'vendor/dragula/dragula.min.js' %}"></script>
+        {% block scripts %}
+        {% endblock scripts %}
     </body>
 </html>
