--- a/templates/home.html
+++ b/templates/home.html
@@ -14,6 +14,17 @@ document.addEventListener("DOMContentLoaded", (e) => {
         center: [-80.793457, 35.782169],
         zoom: 4,
     })
+    // Fullscreen Feature
+        map.addControl(new mapboxgl.FullscreenControl());
+    // Add geolocate control to the map.
+        map.addControl(
+        new mapboxgl.GeolocateControl({
+        positionOptions: {
+        enableHighAccuracy: true
+    },
+        trackUserLocation: true
+    })
+    );
     console.log("map loaded!")
     for (let i = 0; i < route_info.length; i++) {
         let route = route_info[i]
