--- a/templates/climbguide/pointofinterest_detail.html
+++ b/templates/climbguide/pointofinterest_detail.html
@@ -14,6 +14,7 @@
 <div>
     {{ pointofinterest.get_category_display }}<br>
     {{ pointofinterest.information }}
+    {{ pointofinterest.location.location }}
 </div><br>
 {% if user.is_authenticated and user == pointofinterest.owner %}
 <button id="button-one">Edit Point of Interest</button>
@@ -38,16 +39,6 @@
         </div>
     </form>
 </div>
-<button id="button-three">Submit Location</button>
-<div id="form-three" class="hidden">
-    <form action="{% url 'add_poi_location' pointofinterest_pk=pointofinterest.pk %}" method="POST" enctype="multipart/form-data">
-        {% csrf_token %}
-        {{ LocationForm.as_p }}
-        <div>
-            <button type="submit">Submit Location</button>
-        </div>
-    </form>
-    {{ Locationform.media }}
     <div>
         <a href="{% url 'add_poi_location' pointofinterest_pk=pointofinterest.pk %}"><button>Get Location</button></a>
     </div>
