--- a/templates/climbguide/route_detail.html
+++ b/templates/climbguide/route_detail.html
@@ -20,7 +20,7 @@
         {% csrf_token %}
         {{ PhotoForm.as_p }}
         <div>
-            <button type="submit">Submit Photo</button>
+            <button class="f6 grow no-underline br-pill ph3 pv2 mb2 dib white bg-dark-green" href="#0"type="submit" >Submit Photo</button>
         </div>
     </form>
 </div>
