--- a/templates/climbguide/add_pointofinterest.html
+++ b/templates/climbguide/add_pointofinterest.html
@@ -5,6 +5,6 @@
 <form action ="{% url 'add_pointofinterest' %}" method="POST">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Add Point of Interest</button>
+    <button class="f6 grow no-underline br-pill ph3 pv2 mb2 dib white bg-dark-green" href="#0"type="submit">Add Point of Interest</button>
 </form>
 {% endblock %}
