--- a/templates/climbguide/addphoto_to_pointofinterest.html
+++ b/templates/climbguide/addphoto_to_pointofinterest.html
@@ -7,7 +7,7 @@
         {% csrf_token %}
         {{ form.as_p }}
         <div>
-            <button type="submit">Submit Photo</button>
+            <button class="f6 grow no-underline br-pill ph3 pv2 mb2 dib white bg-dark-green" href="#0"type="submit">Submit Photo</button>
         </div>
     </form>
 </div>
