--- a/templates/climbguide/delete_pointofinterest.html
+++ b/templates/climbguide/delete_pointofinterest.html
@@ -7,8 +7,8 @@
         {% csrf_token %}
         <p>Do you want to delete this point of interest?</p>
         <div>
-            <button type="submit">Delete</button><br>
-            <a href="{% url 'pointofinterest_detail' pointofinterest_pk=pointofinterest.pk %}"><button>Cancel</button>></a>
+            <button class="f6 grow no-underline br-pill ph3 pv2 mb2 dib white bg-dark-green" href="#0"type="submit">Delete</button>
+            <a href="{% url 'pointofinterest_detail' pointofinterest_pk=pointofinterest.pk %}"><button class="f6 grow no-underline br-pill ph3 pv2 mb2 dib white bg-dark-green" href="#0"type="submit">Cancel</button></a>
         </div>
     </form>
 </p>
