--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,7 @@
     <input type="search" name="location" placeholder="Location" value="{{ location_query }}"/>
     <input type="search" name="routetype" placeholder="Route Type" value="{{ route_type_query}}"/>
     <p>
-        <button type="submit">Search</button>
+        <button class="f6 grow no-underline br-pill ph3 pv2 mb2 dib white bg-dark-green" href="#0"type="submit">Search</button>
     </p>
 </form>
 <div id='map' style='width: 400px; height: 300px;'></div>
